<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.findmore.myshop.ui.fragments.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/home_fragment" >
        <action
            android:id="@+id/action_navigation_home_to_profileFragment"
            app:destination="@id/navigation_profile" />
        <action
            android:id="@+id/action_navigation_home_to_navigation_search"
            app:destination="@id/navigation_search" />
        <action
            android:id="@+id/action_navigation_home_to_navigation_cart"
            app:destination="@id/navigation_cart" />
        <action
            android:id="@+id/action_navigation_home_to_settingsFragment"
            app:destination="@id/navigation_compass" />

    </fragment>

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.findmore.myshop.ui.fragments.search.SearchFragment"
        tools:layout="@layout/fragment_dashboard" >

        <action
            android:id="@+id/action_navigation_search_to_navigation_home"
            app:destination="@id/navigation_home" />
    </fragment>

    <fragment
        android:id="@+id/navigation_cart"
        android:name="com.findmore.myshop.ui.fragments.cart.CartFragment"
        android:label="@string/title_Cart"
        tools:layout="@layout/fragment_cart" >
        <action
            android:id="@+id/action_navigation_cart_to_navigation_home"
            app:destination="@id/navigation_home" />
    </fragment>

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.findmore.myshop.ui.fragments.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" >
        <action
            android:id="@+id/action_profileFragment_to_navigation_home"
            app:destination="@id/navigation_home" />
    </fragment>
    <fragment
        android:id="@+id/navigation_compass"
        android:name="com.findmore.myshop.ui.fragments.settings.SettingsFragment"
        android:label="title_compass"
        tools:layout="@layout/settings_fragment" />
</navigation>
