<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/color_white">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imgEmpty"
        android:layout_width="178dp"
        android:layout_height="178dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:scaleType="fitXY"
        app:srcCompat="@drawable/img_empty_cart"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintVertical_bias="0.4"
        />

    <TextView
        android:id="@+id/tv1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_24dp"
        android:text="@string/sorry"
        android:textColor="@color/secondary_text"
        android:textSize="@dimen/text_16"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgEmpty"
        app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintVertical_bias="0.1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/error_maintenance"
        android:textSize="@dimen/text_label1"
        android:textColor="@color/secondary_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv1"
        android:layout_marginStart="@dimen/dimen_24dp"
        android:padding="@dimen/dimen_10dp"
       />

    <Button
        android:id="@+id/btn_Refresh"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/refresh"
        android:layout_margin="@dimen/dimen_10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        style="@style/AppTheme.B4"
        android:gravity="center"
        android:textColor="@color/color_white"
        android:background="@color/button_color"
        />
</androidx.constraintlayout.widget.ConstraintLayout>