<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/color_white"
    android:padding="@dimen/dimen_16dp">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/ly_CartStatus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imgLogIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.15"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_radio_active"/>

        <View
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:layout_margin="4dp"
            android:background="@android:color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/imgCheckOut"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/imgLogIn"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.159" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imgCheckOut"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_radio_active"/>

        <View
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:layout_margin="4dp"
            android:background="@android:color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/imgPayment"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/imgCheckOut"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.181" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imgPayment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.85"
            app:srcCompat="@drawable/ic_radio_inactive"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:gravity="center"
            android:text="@string/login"
            android:textSize="@dimen/text_label1"
            android:textColor="@color/primary_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.127"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imgLogIn" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/shipping"
            android:layout_marginTop="12dp"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/text_label1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imgCheckOut" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:gravity="center"
            android:text="@string/payment"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/text_label1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.899"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imgPayment" />
    </androidx.constraintlayout.widget.ConstraintLayout>


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="38dp"
        android:text="SHIPPING ADDRESS"
        android:textColor="@color/accent"
        android:textSize="@dimen/text_title_20"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ly_CartStatus" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delivery_address"
        android:textColor="@color/primary_text"
        android:textSize="@dimen/text_16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.079" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/ly_Address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView1">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dimen_10dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/imgEdit"
            app:layout_constraintHorizontal_bias="0.078"
            app:layout_constraintStart_toEndOf="@+id/appCompatImageView"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.68"
            tools:layout_editor_absoluteY="13dp">

            <TextView
                android:id="@+id/tvName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/primary_text"
                android:textSize="@dimen/text_label" />

            <TextView
                android:id="@+id/tvAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/primary_text"
                android:textSize="@dimen/text_label" />
            <TextView
                android:id="@+id/tvPhoneNum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/primary_text"
                android:textSize="@dimen/text_label" />
        </LinearLayout>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/appCompatImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dimen_10dp"
            android:padding="2dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_radio_address" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imgEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dimen_10dp"
            android:padding="2dp"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_edit_address" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/btn_NewAddress"
        style="@style/AppTheme.B2"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="30dp"
        android:drawableEnd="@drawable/ic_plus1"
        android:drawablePadding="@dimen/dimen_6dp"
        android:text="@string/add_new_address"
        android:textColor="@color/bottom_nav_color1"
        android:textSize="@dimen/text_label1"
        app:layout_constraintBottom_toTopOf="@+id/view"
        app:layout_constraintTop_toBottomOf="@+id/ly_Address"
        tools:layout_editor_absoluteX="16dp" />

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_margin="@dimen/dimen_10dp"
        android:background="@color/bottom_nav_color2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.68"
        tools:layout_editor_absoluteX="26dp" />

    <TextView
        android:id="@+id/tvLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/billing_address"
        android:textColor="@color/primary_text"
        android:textSize="@dimen/text_16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
         android:layout_marginTop="@dimen/dimen_16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view" />

    <com.google.android.material.checkbox.MaterialCheckBox
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:checked="true"
        android:text="@string/same_as_shipping_address"
        android:textColor="@color/secondary_text"
        app:buttonTint="@color/colorPrimary"
        app:layout_constraintBottom_toTopOf="@+id/btn_Payment"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvLabel" />

    <Button
        android:id="@+id/btn_Payment"
        style="@style/AppTheme.B4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen_10dp"
        android:layout_marginBottom="24dp"
        android:background="@color/button_color"
        android:gravity="center"
        android:text="@string/proceed_to_payment"
        android:textColor="@color/color_white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>