<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.SuccessOrderActivity">

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/img_bgsuccess" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha=".8"
        android:background="@color/button_color"
        android:fitsSystemWindows="true">

        <Button
            android:id="@+id/btn_Back"
            style="@style/AppTheme.B1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dimen_16dp"
            android:layout_weight="1"
            android:text="@string/back_to_home"
            android:textColor="@color/color_white"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintVertical_bias="1"
            tools:layout_editor_absoluteX="10dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appCompatImageView2"
            app:layout_constraintVertical_bias="0.2">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/congratulations"
                android:textSize="@dimen/text_18"
                android:textStyle="bold"
                android:textColor="@color/color_white" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_margin="@dimen/dimen_16dp"
                android:text="@string/your_order_has_been_processed_you_will_receive_a_confirmation_email"
                android:textSize="@dimen/text_label_3"
                android:textColor="@color/color_white" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_OrderId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="ORDER NO: 11123124"
            android:textColor="@color/color_white"
            android:textSize="@dimen/text_16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.2" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/appCompatImageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.35"
            app:srcCompat="@drawable/ic_sucess_page" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- This FrameLayout insets its children based on system windows using
         android:fitsSystemWindows. -->
</androidx.constraintlayout.widget.ConstraintLayout>